# HW2_Agentic_Debate

./: .env.example  .gitignore  README.md  instr2.txt  instructions_guidelines.txt  instructions_main.txt  pyproject.toml  test_ipc.py  update_docs.py
config/: logging_config.json  rate_limits.json  setup.json
data/: chomsky.md  hitchens.md
docs/: PLAN.md  PRD.md  PRD_gatekeeper.md  PRD_ipc_protocol.md  PRD_judging_algorithm.md  PRD_skill_system.md  PRD_watchdog.md  SAMPLE_DEBATE_TRANSCRIPT.md  TODO.md  architecture.md
notebooks/: debate_analysis.ipynb
prompts/: prompt_log.md
results/: sample_debate.json  showcase_10round_debate.json
src/: main.py
src/debate/: __init__.py  cli.py  constants.py  menu.py
src/debate/agents/: __init__.py  api_mixin.py  base_agent.py  base_subagent.py  con_subagent.py  master_agent.py  pro_subagent.py
src/debate/analysis/: cost_analyzer.py
src/debate/debate/: agreement_detector.py  process_manager.py  round_manager.py  session.py  session_orchestrator.py  verdict.py  verdict_generator.py
src/debate/ipc/: __init__.py  ipc_channel.py  ipc_mixin.py  message.py  validator.py
src/debate/rag/: retriever.py  role_assigner.py
src/debate/replay/: replayer.py
src/debate/sdk/: __init__.py  sdk.py
src/debate/shared/: __init__.py  config.py  constants.py  gatekeeper.py  logging_mixin.py  version.py  watchdog.py
src/debate/skills/: con_skill.py  con_skill.skill.md  (+5 more)
tests/: conftest.py
tests/integration/: test_full_debate.py  test_gatekeeper_queue.py  test_ipc_flow.py
tests/unit/: test_cli.py  test_menu.py  test_sdk.py
(+63 files in other folders)
